--- a/TrayApp/config.ini
+++ b/TrayApp/config.ini
@@ -1,2 +1,9 @@
 [Settings]
-ip=127.0.0.1
+target_ip = 127.0.0.1
+check_interval = 30
+notify_on_change = yes
+enable_logging = yes
+always_on_screen = no
+window_alpha = 0.99
+window_x = 100
+window_y = 500
