--- a/assets/config.ini
+++ b/assets/config.ini
@@ -3,7 +3,7 @@ target_ip = 127.0.0.1
 check_interval = 30
 notify_on_change = yes
 enable_logging = yes
-always_on_screen = no
+always_on_screen = yes
 window_alpha = 0.99
 window_x = 100
 window_y = 500
